--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1514,6 +1514,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Essayez différents styles, fonds d\'écran, etc."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Économiseur d\'écran"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"économiseur d\'écran"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Utiliser l\'économiseur d\'écran"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Lorsque l\'appareil est en charge ou connecté à une station d\'accueil"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Lorsque l\'appareil est en charge"</string>
@@ -3414,7 +3416,7 @@
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"Aucun VPN ajouté"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"Connexion permanente au VPN"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"Non compatible avec cette application"</string>
-    <string name="vpn_always_on_summary_active" msgid="175877594406330387">"Toujours activée"</string>
+    <string name="vpn_always_on_summary_active" msgid="175877594406330387">"Toujours activé"</string>
     <string name="vpn_insecure_summary" msgid="4450920215186742859">"Non sécurisée"</string>
     <string name="vpn_require_connection" msgid="1027347404470060998">"Bloquer les connexions sans VPN"</string>
     <string name="vpn_require_connection_title" msgid="4186758487822779039">"Exiger une connexion VPN ?"</string>
@@ -3799,8 +3801,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volume des appels"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volume des alarmes"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volume des sonneries/notifications"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Volume de la sonnerie"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volume des notifications"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Sonnerie du téléphone"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Son par défaut des notifications"</string>
