--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1532,6 +1532,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Izmēģiniet dažādus stilus, fona tapetes utt."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekrānsaudzētājs"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekrānsaudzētājs"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Izmantot ekrānsaudzētāju"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Uzlādes vai dokošanas laikā"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Uzlādes laikā"</string>
@@ -3840,8 +3842,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Zvana skaļums"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Signāla skaļums"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Zvanu/paziņojumu sign. skaļums"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Zvana skaļums"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Paziņojumu skaļums"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Tālruņa zvana signāls"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Paziņojuma noklusējuma skaņa"</string>
