--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1512,6 +1512,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"尝试不同的样式、壁纸等"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"屏保"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"屏保"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"使用屏保"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"充电或插入基座时"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"充电时"</string>
@@ -3084,7 +3086,7 @@
     <string name="menu_duration_12h" msgid="9206922888181602565">"12 小时"</string>
     <string name="menu_duration_1d" msgid="8538390358158862330">"1天"</string>
     <string name="menu_show_system" msgid="3780310384799907818">"显示系统应用"</string>
-    <string name="menu_hide_system" msgid="5197937451381420622">"隐藏系统程序"</string>
+    <string name="menu_hide_system" msgid="5197937451381420622">"隐藏系统应用"</string>
     <string name="menu_show_percentage" msgid="6143205879027928330">"显示百分比"</string>
     <string name="menu_use_uss" msgid="1663914348353623749">"使用 USS"</string>
     <string name="menu_proc_stats_type" msgid="5048575824389855689">"统计信息类型"</string>
@@ -3797,8 +3799,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"通话音量"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"闹钟音量"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"铃声和通知音量"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"铃声音量"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"通知音量"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"手机铃声"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"默认通知提示音"</string>
