--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -1538,6 +1538,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Încearcă diverse stiluri, imagini de fundal și altele"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Economizor de ecran"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"screensaver"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Folosește screensaverul"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"În timpul încărcării sau andocării"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"În timpul încărcării"</string>
@@ -3846,8 +3848,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Volumul apelului"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volumul alarmei"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volum pentru sonerie și notificări"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Volumul soneriei"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volumul notificărilor"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Ton de sonerie al telefonului"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Sunet de notificare prestabilit"</string>
