--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -1512,6 +1512,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Jaribu miundo, mandhari tofauti na zaidi"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Taswira ya skrini"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"taswira ya skrini"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Tumia taswira ya skrini"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Wakati imeunganishwa na kifaa kingine au inapochaji"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Inapochaji"</string>
@@ -3797,8 +3799,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Sauti ya simu"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Sauti ya kengele"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Sauti ya arifa na mlio wa simu"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Kiwango cha sauti ya mlio"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Sauti ya arifa"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Mlio wa simu"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Sauti chaguomsingi ya arifa"</string>
