Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ie9a020deba61f589a9a40f22048a1bc8919e283d

Former-commit-id: da6968cf024845bf7455d7bd3165e6c88dc7882b

--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -4997,7 +4997,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"выраз дысплея, выемка"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Стандартная налада"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Не ўдалося ўжыць накладанне на экран"</string>
-    <string name="special_access" msgid="1767980727423395147">"Спецыяльны доступ"</string>
+    <string name="special_access" msgid="1767980727423395147">"Спецыяльны доступ для праграм"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> праграма можа выкарыстоўваць даныя без абмежаванняў</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> праграмы могуць выкарыстоўваць даныя без абмежаванняў</item>
